# cowrie-discord-alert

./: Cargo.toml  README.md
src/: main.rs
