[package]
name = "logwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = "0.1"
serde_json = "1.0.102"
ureq = {version = "2.7.1", features=["json"]}

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
strip = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
